package NYT.NChunkHolder.NProto;

import "yt/ytlib/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TBlockInfo
{
    required int64 offset = 1;
    required int32 size = 2;
    required uint64 checksum = 3;
}

message TChunkAttributes
{
    extensions 100 to max;

    required int32 type = 1;
}

// TChunkMeta is stored in *.meta files on chunk holders.
message TChunkMeta
{
    required NYT.NProto.TGuid id = 1;
    repeated TBlockInfo blocks = 2;
    required TChunkAttributes attributes = 3;
}

// TChunkInfo is sent in reply to GetChunkInfo requests.
message TChunkInfo
{
    required NYT.NProto.TGuid id = 1;
    // Full chunk size (including both data and meta).
    required int64 size = 2;
    required uint64 meta_checksum = 3;
    repeated TBlockInfo blocks = 4;
    required TChunkAttributes attributes = 5;
}

////////////////////////////////////////////////////////////////////////////////
